# daimler-tss-coding-task-02

./: Dockerfile  README.md  benchmark.sh  build.sh  merge_intervals.py  pyproject.toml
.github/workflows/: build.yaml  ci.yaml
